scaling policy added

--- a/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
+++ b/hugging-face-lambda-step/sm-pipelines-hugging-face-lambda-step.ipynb
@@ -620,7 +620,7 @@
     "\n",
     "After the previous cell completes, you can check whether the endpoint has finished deploying.  In SageMaker Studio, click on the tilted triange icon in the left toolbar, then select **Endpoints** in the drop down menu.  In the list of endpoints, click on the one with the name beginning `demo-hf-endpoint`, then click on **AWS settings**.  When the Status becomes InService, you can run the following code cells.\n",
     "\n",
-    "### Setup \n",
+    "### Scaling Policy and setup\n",
     "\n",
     "We'll use the SageMaker Runtime API to get predictions."
    ]
@@ -632,6 +632,71 @@
    "outputs": [],
    "source": [
     "sm_runtime = boto_session.client(\"sagemaker-runtime\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we get predictions, however, we'll first set a scaling policy for the endpoint that will direct the endpoint to autoscale to zero instances when there has not been any incoming data for a while.  This is an effective cost optimization technique where data arrives sporadically because there are no AWS charges for the endpoint if zero instances are running."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = boto3.client(\"application-autoscaling\")  \n",
+    "\n",
+    "# specify ID for application autoscaling to use for referencing the endpoint\n",
+    "resource_id = (\"endpoint/\" + endpoint_name + \"/variant/\" + \"AllTraffic\")  \n",
+    "\n",
+    "# configure autoscaling down to zero instances\n",
+    "target_response = client.register_scalable_target(\n",
+    "    ServiceNamespace=\"sagemaker\",\n",
+    "    ResourceId=resource_id,\n",
+    "    ScalableDimension=\"sagemaker:variant:DesiredInstanceCount\",\n",
+    "    MinCapacity=0,\n",
+    "    MaxCapacity=5,\n",
+    ")\n",
+    "\n",
+    "print(target_response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we specify a scaling policy that determines how the endpoint scales in and out.  A cooldown period helps you prevent your autoscaling group from launching or terminating additional instances before the effects of previous activities are visible. You can configure the length of time based on your instance startup time or other application needs. The `ScaleInCooldown` is the amount of time, in seconds, after a scale in activity completes before another scale in activity can start.  Similarly, the `ScaleOutCooldown` is the amount of time, in seconds, after a scale out activity completes before another scale out activity can start."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policy_response = client.put_scaling_policy(\n",
+    "    PolicyName=\"Invocations-ScalingPolicy\",\n",
+    "    ServiceNamespace=\"sagemaker\",  # The namespace of the AWS service that provides the resource.\n",
+    "    ResourceId=resource_id,  # Endpoint name\n",
+    "    ScalableDimension=\"sagemaker:variant:DesiredInstanceCount\",  # SageMaker supports only Instance Count\n",
+    "    PolicyType=\"TargetTrackingScaling\",  # 'StepScaling'|'TargetTrackingScaling'\n",
+    "    TargetTrackingScalingPolicyConfiguration={\n",
+    "        \"TargetValue\": 5.0,  # The target value for the metric. - here the metric is - SageMakerVariantInvocationsPerInstance\n",
+    "        \"CustomizedMetricSpecification\": {\n",
+    "            \"MetricName\": \"ApproximateBacklogSizePerInstance\",\n",
+    "            \"Namespace\": \"AWS/SageMaker\",\n",
+    "            \"Dimensions\": [{\"Name\": \"EndpointName\", \"Value\": endpoint_name}],\n",
+    "            \"Statistic\": \"Average\",\n",
+    "        },\n",
+    "        \"ScaleInCooldown\": 180,  \n",
+    "        \"ScaleOutCooldown\": 240  \n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "print(policy_response)"
    ]
   },
   {
